--- a/.github/workflows/RefreshLeaderboard.yml
+++ b/.github/workflows/RefreshLeaderboard.yml
@@ -25,7 +25,7 @@ jobs:
         pip install dnspython
         pip install certifi
         python -m pip install pymongo==3.11
-        echo "${{ secrets.ENV }}" > "${{ github.workspace }}/Assets/.env"
+        echo "${{ secrets.ENV }}" > "Assets/.env"
 
     - name: Run script and commit changes
       run: |
