--- a/.github/workflows/RefreshLeaderboard.yml
+++ b/.github/workflows/RefreshLeaderboard.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Run script and commit changes
       run: |
-        python GetLeaderboard.py  
+        python navigator/GetLeaderboard.py  
         git add /navigator/Assets/Leaders.json
         git commit -m "Refresh Leaders.json"
         git push
