--- a/.github/workflows/RefreshLeaderboard.yml
+++ b/.github/workflows/RefreshLeaderboard.yml
@@ -24,6 +24,7 @@ jobs:
         pip install python-dotenv
         pip install dnspython
         pip install certifi
+        pip install cryptogtaphy
         python -m pip install pymongo==3.11
         echo "${{ secrets.ENV }}" > "Assets/.env"
 
