--- a/.github/workflows/RefreshLeaderboard.yml
+++ b/.github/workflows/RefreshLeaderboard.yml
@@ -37,6 +37,6 @@ jobs:
     - name: Run script and commit changes
       run: |        
         python navigator/GetLeaderboard.py  
-        git add navigator/Leaders.json
+        git add pstlo.github.io/navigator/Leaders.json
         git commit -m "Refresh Leaders.json"
         git push
