--- a/.github/workflows/RefreshLeaderboard.yml
+++ b/.github/workflows/RefreshLeaderboard.yml
@@ -36,9 +36,9 @@ jobs:
 
     - name: Run script and commit changes
       run: |        
-        python navigator/GetLeaderboard.py 
-        ls
-        pwd
+        python navigator/GetLeaderboard.py
+        git config --global user.name "pstlo"
+        git config --global user.email "mikey.pistolesi1@gmail.com"
         git add Leaders.json
         git commit -m "Refresh Leaders.json"
         git push
